@@ -12,7 +12,7 @@ depends=('gmp' 'pacman' 'ghc' 'haskell-regex-base' 'haskell-regex-pcre'
 optdepends=('pacman-color: For coloured pacman output in Aura.')
 options=('strip')
 source=(https://bitbucket.org/fosskers/aura/downloads/${_hkgname}-${pkgver}.tar.gz)
-md5sums=('03a0b3ed48ee7e838033b8d9f903fb89')
+md5sums=('00398ee7fcf781488a67416d76f48cf5')
 build() {
     cd ${srcdir}/${_hkgname}-${pkgver}
     runhaskell Setup configure --prefix=/usr --docdir=/usr/share/doc/${pkgname} -O
@@ -25,6 +25,10 @@ build() {
     # Installing bash completions
     mkdir -p "$pkgdir/usr/share/bash-completion/completions/"
     install -m 644 bashcompletion.sh "$pkgdir/usr/share/bash-completion/completions/aura"
+
+    # Installing zsh completions
+    mkdir -p "$pkgdir/usr/share/zsh/site-functions/"
+    install -m 644 _aura "$pkgdir/usr/share/zsh/site-functions/_aura"
 
     # Directory for storing PKGBUILDs
     mkdir -p "$pkgdir/var/cache/aura/pkgbuilds"
