@@ -29,7 +29,8 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 extra-source-files:  aura.8,
-                     bashcompletion.sh
+                     bashcompletion.sh,
+                     _aura
 
 source-repository head
   type:     git
